@@ -14,7 +14,6 @@
 
 #include "TransportImpl.h"
 #include "TransportInst.h"
-#include "SendResponseListener.h"
 
 #include "dds/DCPS/DataWriterImpl.h"
 #include "dds/DCPS/DataReaderImpl.h"
@@ -656,7 +655,6 @@ SendControlStatus
 DataLink::send_control(const DataSampleHeader& header, ACE_Message_Block* message)
 {
   DBG_ENTRY_LVL("DataLink", "send_control", 6);
-  SendResponseListener listener;
 
   TransportSendControlElement* elem;
 
@@ -665,7 +663,7 @@ DataLink::send_control(const DataSampleHeader& header, ACE_Message_Block* messag
                           this->send_control_allocator_->malloc()),
                         TransportSendControlElement(1,  // initial_count
                                                     GUID_UNKNOWN,
-                                                    &listener,
+                                                    &send_response_listener_,
                                                     header,
                                                     message,
                                                     this->send_control_allocator_),
