@@ -14,6 +14,7 @@
 #include "dds/DCPS/RcObject_T.h"
 #include "ReceiveListenerSetMap.h"
 #include "RepoIdSetMap.h"
+#include "SendResponseListener.h"
 #include "TransportDefs.h"
 #include "TransportImpl_rch.h"
 #include "TransportSendStrategy.h"
@@ -443,6 +444,9 @@ protected:
   /// Is pub or sub ?
   bool is_active_;
   bool start_failed_;
+
+  /// Listener for TransportSendControlElements created in send_control
+  SendResponseListener send_response_listener_;
 };
 
 } // namespace DCPS
